...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- explicitly set width for edit text for animations without animations would be 0dp for better adjusting to screen sizes -->
        <EditText
            android:id="@+id/chat_edit_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/grey_rounded_rectangle_background"
            android:hint="@string/text_input_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:chatTextInput="@{chatEnterButton}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat_enter_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/chat_enter_button"
...
