...
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start|center_vertical"
                    app:toolbarProfileImage="@{user}" />

                <TextView
                    android:id="@+id/title_user_name"
                    style="@style/ToolbarUsernameTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@{user.userName}" />
...
